2007-04-21  Brian Matherly  <brian@gramps-project.org>
	* src/Filters/Rules/Person/_IsBookmarked.py:
	  0000970: _IsBookmarked.py causes crash

2007-04-21  Benny Malengier <bm@cage.ugent.be>
        * src/Editors/_EditFamily.py : add up down arraw on children list
	* src/DisplayTabs/_EmbeddedList.py : generalize select method for
	up/down movement in list
2007-04-20  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_BaseModel.py (BaseModel.add_row_by_handle): 
	if search not defined, do an insert
	* src/GrampsDb/_ReadGedcom.py: fix calendar parsing
	* src/GrampsDb/_WriteGedcom.py: fix calendar generation

2007-04-19  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: PROPERLY escape ampersands

2007-04-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_NoteModel.py: colorize using marker

2007-04-18  Benny Malengier <bm@cage.ugent.be>
	* src/DisplayTabs/_EmbeddedList.py
	* src/DisplayTabs/_BackRefList.py
	* src/DisplayTabs/_NoteTab.py
	* src/DisplayTabs/_ButtonTab.py
	Added move up and move down buttons to the EmbeddedList, use them only
	for now in NoteTab

2007-04-18  Brian Matherly  <brian@gramps-project.org>
    * src/DbManager.py: generate DEFAULT_DIR for databases from const.home_dir

2007-04-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyList.py: add marriage date column
	* src/GrampsDb/_DbUtils.py: add function for finding a marriage event
	* src/DisplayModels/_FamilyModel.py: add marriage date column
	* src/GrampsDbUtils/_GedcomParse.py: handle place form handing
	* src/GrampsDbUtils/_GedcomLex.py: handle place form handing
	* src/GrampsDbUtils/_WriteGedcom.py: handle note list
	* src/docgen/ODFDoc.py: escape special characters

2007-04-17  Benny Malengier <bm@cage.ugent.be>
       * src/images/
       * src/GrampsWidgets.py
       * src/glade/gramps.glade
       * src/glade/edit_person.glade
       * src/DisplayTabs/_NoteTab.py