@@ -64,7 +64,7 @@ _esc_map = {
     '\x0c'           : '',
     '\n'             : '<text:line-break/>',
     '\t'             : '<text:tab-stop/>',
-    '&lt;super&gt;'  :  '<text:span text:style-name="GSuper">',
+    '&lt;super&gt;'  : '<text:span text:style-name="GSuper">',
     '&lt;/super&gt;' : '</text:span>',
     }
 
@@ -854,7 +854,7 @@ class ODFDoc(BaseDoc.BaseDoc):
 
             self.start_paragraph(style_name)
             self.cntnt.write('<text:span text:style-name="GRAMPS-preformat">')
-            self.cntnt.write(escape(text))
+            self.cntnt.write(escape(text,_esc_map))
             self.cntnt.write('</text:span>')
             self.end_paragraph()
         elif format == 0:
@@ -998,7 +998,7 @@ class ODFDoc(BaseDoc.BaseDoc):
         self.cntnt.write('<text:p text:style-name="X%s"> ' % pname)
 
         self.cntnt.write('<text:span text:style-name="F%s">\n' % pname)
-        self.write_text(escape('\n'.join(text)))
+        self.write_text('\n'.join(text))    # No escape(): write_text does that.
         self.cntnt.write('</text:span>\n</text:p>\n</draw:text-box>\n')
         self.cntnt.write('</draw:frame>\n')
         
@@ -1067,7 +1067,7 @@ class ODFDoc(BaseDoc.BaseDoc):
         self.cntnt.write('<text:p text:style-name="F%s">' % para_name)
         self.cntnt.write('<text:span text:style-name="F%s"' % para_name)
         self.cntnt.write(' fo:max-height="%.2f">' % font.get_size() )
-        self.cntnt.write(escape(text))
+        self.cntnt.write(escape(text,_esc_map))
         self.cntnt.write('</text:span></text:p>')
         self.cntnt.write('</draw:text-box>\n')
         self.cntnt.write('</draw:frame>\n')
@@ -1125,7 +1125,7 @@ class ODFDoc(BaseDoc.BaseDoc):
             self.cntnt.write('<draw:text-box>')
             self.cntnt.write('<text:p text:style-name="X%s">' % para_name)
             self.cntnt.write('<text:span text:style-name="F%s">' % para_name)
-            self.cntnt.write(escape(text))
+            self.cntnt.write(escape(text,_esc_map))
             self.cntnt.write('</text:span>\n')
             self.cntnt.write('</text:p>\n')
             self.cntnt.write('</draw:text-box>')
